<resources>
    <string name="app_name">Repair Battery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="stars">Quick Charge</string>
    <string name="start2">Start Repair</string>
    <string name="restart">Stop</string>
    <string name="Nocharge">No charge</string>
    <string name="brightness">BRIGHTNESS</string>
    <string name="airplane">AIRPLANE MODE</string>
    <string name="rotate">AUTO ROTATE</string>
    <string name="rotate_true">ROTATE LOCKED</string>
    <string name="gps">GPS MANAGER</string>


    <!--batery intro-->
    <string name="one">REPAIR BATTERY</string>
    <string name="two">FAST CHARGER</string>
	<string name="grande">Grande: </string>  
	<string name="available">Voltage: </string> 
	<string name="temperature">Temperature: </string>
	<string name="nhietdo">&#xb0;</string>
	 
	<!--dialog-->
    <string name="summary">Test Summary</string>
    <string name="low">Low charge</string>
    <string name="inactive">Inactive</string>
    <string name="healthy">Healthy</string>
    <string name="alert1">has detected</string>
    <string name="problem">problems</string>
    <string name="alert2">Do you want it to  fix them? This could improve your battery life by a </string>
    <string name="cancel">CANCEL</string>
    <string name="fix">FIX PROBLEMS!</string>
    <string name="repair1">Repair low charge</string>
    <string name="repair2">Repair inactive</string>
    <string name="alert3">Congratulations! All proplems were fixed.</string>
    <string name="information">Information</string>
    <string name="noproblems">No find problems!</string>
    
    <!-- Fix activity -->
    <string name="Upload">Repair</string>
    <string name="Error">Error</string>
    <string name="Complete">Complete</string>
    <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
    <string name="IntegerProgressSample">Integer Progress Sample</string>
    <string name="StateChangeSample">State Change Sample</string>
    <string name="ProgressPaddingSample">Progress Padding Sample</string>
    <string name="CustomSelectorSample">Custom Selector Sample</string>
    
	<string name="url_app">https://play.google.com/store/apps/details?id=fastCharger.BatteryFixes.repairbattery</string>
    <array name="sample_list">
        <item>@string/IndeterminateProgressSample</item>
        <item>@string/IntegerProgressSample</item>
        <item>@string/StateChangeSample</item>
        <item>@string/ProgressPaddingSample</item>
        <item>@string/CustomSelectorSample</item>
    </array>
    
    

</resources>
