<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackgroud">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6">
            <com.ldoublem.loadingviewlib.LVBattery
                    android:id="@+id/lv_battery"
                    android:layout_width="165dp"
                    android:layout_height="165dp"
                    android:layout_gravity="center_vertical|center_horizontal"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/grande"
                android:text="@string/grande"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:id="@+id/available"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temperature"
                android:text="@string/temperature"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6">
        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnStart"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/start2"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</LinearLayout>