<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingLeft="35dp">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-35dp">
        <com.dd.CircularProgressButton
        android:id="@+id/circularButton1"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:textColor="@color/cpb_white"
        android:textSize="18sp"
        app:cpb_cornerRadius="48dp"
        app:cpb_iconComplete="@drawable/ic_action_accept"
        app:cpb_iconError="@drawable/ic_action_cancel"
        app:cpb_textIdle="@string/Upload" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repair1"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>
    </LinearLayout>

   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <com.dd.CircularProgressButton
        android:id="@+id/circularButton2"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:textColor="@color/cpb_white"
        android:textSize="18sp"
        app:cpb_cornerRadius="48dp"
        app:cpb_iconComplete="@drawable/ic_action_accept"
        app:cpb_iconError="@drawable/ic_action_cancel"
        app:cpb_textIdle="@string/Upload" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repair2"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>

