<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="-2dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.materialtabs.fragments.OneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@color/colorPrimary"
           android:layout_weight="0.4">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v4.view.ViewPager
                    android:id="@+id/view_pager1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </android.support.v4.view.ViewPager>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:padding="6dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvCharge"
                        android:text="@string/Nocharge"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:textSize="16dp"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/imgStatutCharging"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_battery"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lo1"
                    android:layout_weight="0.4"
                    android:background="@drawable/border_layout"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/icon1"
                        android:src="@drawable/ic_brightness_min"
                        android:background="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvTitle1"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/text"
                        android:textSize="@dimen/tvText"
                        android:text="@string/brightness"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:id="@+id/lo2"
                    android:orientation="vertical"
                    android:background="@drawable/border_layout">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/icon2"
                        android:src="@drawable/ic_airplane"
                        android:background="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvTitle2"
                        android:textColor="@color/text"
                        android:layout_marginTop="5dp"
                        android:text="@string/airplane"
                        android:textSize="@dimen/tvText"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.4">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/lo3"
                    android:background="@drawable/border_layout">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/icon3"
                        android:src="@drawable/ic_rotate"
                        android:background="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvTitle3"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/text"
                        android:text="@string/rotate"
                        android:textSize="@dimen/tvText"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lo4"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/border_layout">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/icon4"
                        android:src="@drawable/ic_gps"
                        android:background="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvTitle4"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/text"
                        android:textSize="@dimen/tvText"
                        android:text="@string/gps"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>